--- a/ui/customer/licenses.html
+++ b/ui/customer/licenses.html
@@ -576,7 +576,7 @@ hr.sep{
       <button id="btnExportCsv" class="btn-outline">Export CSV</button>
       <button id="btnExportHistory" class="btn-outline">Export 30-Day History CSV</button>
       <button id="btnClearHistory" class="btn-outline">Clear Local History</button>
-      <span class="muted" style="font-weight:900;">Local history stored in browser (no worker changes required).</span>
+      <span class="muted" style="font-weight:900;">Local history stored in browser.</span>
     </div>
 
     <div class="row">
